# ScaleDP-Tutorials

./: 1.QuickStart.ipynb  2.Ocr.ipynb  3.Ner.ipynb  4.LLMNer.ipynb  5.WithSparkPdf.ipynb  README.md  pyproject.toml
ner/: 1.Ner.ipynb  2.LLMNer.ipynb
object-detection/: 1.YoloOnnxDetector.ipynb  2.FaceDetection.ipynb  3.SignatureDetection.ipynb  4.YoloOnnxDetectorBenchmarks.ipynb
ocr/: 1.Ocr.ipynb
