[tool.poetry]
name = "spak-pdf-tutorials"
version = "0.1.0"
description = ""
authors = ["Mykola Melnyk <kolia1985@gmail.com>"]
readme = "README.md"
homepage = "https://stabrise.com/spark-pdf/"

[tool.poetry.dependencies]
python = ">=3.10"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
