[tool.poetry]
name = "scaledp-tutorials"
version = "0.1.0"
description = "Runable examples for ScaledP"
authors = ["Mykola Melnyk <kolia1985@gmail.com>"]
readme = "README.md"
homepage = "https://stabrise.com/scaledp/"

[tool.poetry.dependencies]
python = ">=3.10"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
